
=======================================================
            WanT code:  Log of Changes 
=======================================================


25 Aug 2006      "formatted" attribute no longer specified in iotk file_open (transport)
                 and in iotk writing of ovp. (AF) 

09 Aug 2006      Bug fix in utility/Makefile: LDFLAGS and CFLAGS added during loading.
                 Adviced by Matias Nunez. (AF)

04 Aug 2006      Makefile in libs bug-fixed (wrong compilation of dlamch.f90 under certain
                 circumstances). Courtesy of Matias Nunes. (AF)

22 Jul 2006      Symmetry module added to wannier/ ; qexpt.f90 updated including also
                 the missing qexpt_read_symmetry routine. (AF)

18 Jul 2006      Output fmt in transport changed; ierr is given back in transfer.f90; warnings
                 and errors better treated in trasport; warning.f90 interface slightly changed; (AF)

14 Jul 2006      wS-H instead of H-wS used through the transport code; shutdown added in
                 conductor.f90; cleanup of auxiliary variables in tranport; default for
                 niterx lowered to 20 (instead of 200); documentation updated;
                 define_lead.f90 routine added (to make the smearing technique 
                 fully consistent). (AF)

13 Jul 2006      dos.f90 output changed; summary interface changed (and related upgrades
                 performed); input_from_file procedure adapted from espresso. (AF)

12 Jul 2006      "dos.dat" file produced by conductor.x renamed in "doscond.dat"; tests
                 changed accordingly. Documentation updated. (AF)

10 Jul 2006      configure.h fingerprints added to startup.f90; some bug fixed. (AF)

09 Jul 2006      configure.h (generated during configuration) added; (AF)
                 Italy WINS FIFA football world championship.

07 Jul 2006      qexml.f90 changed: bug fixed; WanT is compatible with espresso-3.1.1 qexml;